# 2048_learning

./: .gitignore  README.md  pyproject.toml
docs/: PROGRESS.md  README.md  codex_prompt_only.md  dev_checklist.md  expectimax_spec.md  imitation_learning_spec.md  progress.md
docs/archive/2048-ai_docs/: 2048_env_spec_and_codex_prompt.md
scripts/: benchmark.py  fix_docs_encoding.py  force_format_docs.py  generate_dataset.py  play_expectimax.py  play_policy.py  play_random.py  run_tests.py  simulate.py  status.py  train_policy.py
src/twenty48/: __init__.py  env.py  mechanics.py  rules.py  utils.py
src/twenty48/ai/: __init__.py  expectimax.py  heuristics.py
src/twenty48/ml/: __init__.py  dataset.py  encoding.py  inference.py  model.py  train.py
tests/: test_clone.py  test_env_step.py  test_mechanics.py
