[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "twenty48"
version = "0.1.0"
description = "2048 game environment with a stable API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
